Made the project ready for handin, removed debug lines and fixed some bugs

--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <project name="ARTI-lab1" basedir="." default="help">
 
-	<property name="student" value="Jon Jonsson" />
+	<property name="student" value="Gudjon Einar Magnusson, Kristjan Broder Lund, Jon Atli Baldvinsson" />
 	<property name="mainclass" value="Main" />
 
 	<property name="lab" value="1" />
